--- a/index.html
+++ b/index.html
@@ -573,14 +573,15 @@
 
 <!-- Client Feedback Section -->
 <!-- Client Feedback Section -->
+<!-- Client Feedback Section -->
 <section class="client-feedback">
     <div class="feedback-container">
         
         <!-- Left Section: Text, Title, and Video -->
         <div class="feedback-left">
             <div class="feedback-hollow-text">FEEDBACK</div>
-            <h2 class="feedback-subtitle">Client Feedback</h2>
-            <h1 class="feedback-title">Hear What Our Client Say About Property</h1>
+            <h1 class="feedback-subtitle">Client Feedback</h1>
+            <h2 class="feedback-title">Hear What Our Client Say About Property</h2>
             <p class="feedback-description">
                 Indulge in the epitome of luxury living at Luxury, where every amenity is meticulously designed to elevate your lifestyle.
             </p>
@@ -591,63 +592,68 @@
         </div>
 
         <!-- Right Section: Carousel -->
-        <!-- Right Section: Carousel -->
-<div class="feedback-right">
-    <div class="carousel-container">
-        <div class="carousel-slide">
-            <!-- Feedback Card 1 -->
-            <div class="feedback-card">
-                <div class="client-info">
-                    <img src="assets/Testimonial1.png" alt="Client 1">
-                    <h3>Sarah P.</h3>
-                    <p>Happy Client</p>
+        <div class="feedback-right">
+            <div class="carousel-container">
+                <div class="carousel-slide">
+                    <!-- Feedback Cards -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assests/Testomonial 1.png" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+
+                    <!-- Feedback Cards -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assests/Testomonial 2.png" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+
+                    <!-- Feedback Cards -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assests/Testomonial 3.png" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+
+                    <!-- Feedback Cards -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assests/Testomonial 4.png" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+
+                    <!-- Feedback Cards -->
+                    <div class="feedback-card">
+                        <div class="client-info">
+                            <img src="assests/Testimonial 5.jpg" alt="Client 1">
+                            <h3>Sarah P.</h3>
+                            <p>Happy Client</p>
+                        </div>
+                        <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
+                    </div>
+                    <!-- Additional Feedback Cards as needed -->
                 </div>
-                <p class="feedback-text"><b>A Lifesaver During Tough Times.</b> <br> After inheriting a home I couldn’t keep, GIGI BUYS HOMES helped me sell it quickly and without hassle. Their team was professional and transparent throughout the entire process.<br>⭐️⭐️⭐️⭐️⭐️</p>
-            </div>
-            <!-- Feedback Card 2 -->
-            <div class="feedback-card">
-                <div class="client-info">
-                    <img src="assets/Testimonial2.png" alt="Client 2">
-                    <h3>Emily</h3>
-                    <p>Happy Client</p>
-                </div>
-                <p class="feedback-text"><b>Fast and Fair!</b> <br> I needed to sell my home fast due to relocation, and GIGI made it happen. I received a fair offer within 24 hours and was able to close the deal on my timeline. Excellent service!<br>⭐️⭐️⭐️⭐️⭐️</p>
-            </div>
-            <!-- Feedback Card 3 -->
-            <div class="feedback-card">
-                <div class="client-info">
-                    <img src="assets/Testimonial3.png" alt="Client 3">
-                    <h3>Michael R.</h3>
-                    <p>Happy Client</p>
-                </div>
-                <p class="feedback-text"><b>Effortless Process.</b> <br> GIGI BUYS HOMES made the process stress-free and easy. I couldn’t be happier with the results.<br>⭐️⭐️⭐️⭐️⭐️</p>
-            </div>
-            <!-- Feedback Card 4 -->
-            <div class="feedback-card">
-                <div class="client-info">
-                    <img src="assets/Testimonial4.png" alt="Client 4">
-                    <h3>Ana K.</h3>
-                    <p>Happy Client</p>
-                </div>
-                <p class="feedback-text"><b>Quick and Easy.</b> <br> The team made the selling process quick and easy, and I was able to close on time.<br>⭐️⭐️⭐️⭐️⭐️</p>
-            </div>
-            <!-- Feedback Card 5 -->
-            <div class="feedback-card">
-                <div class="client-info">
-                    <img src="assets/Testimonial5.png" alt="Client 5">
-                    <h3>John D.</h3>
-                    <p>Happy Client</p>
-                </div>
-                <p class="feedback-text"><b>Highly Recommended!</b> <br> The process was straightforward, and I felt supported every step of the way.<br>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
         </div>
-        <!-- Carousel Controls -->
+
+        <!-- Carousel Controls - Positioned Outside Feedback Right -->
         <div class="carousel-controls">
             <div class="carousel-prev">&#9650;</div>
             <div class="carousel-next">&#9660;</div>
-        </div>
-    </div>
-</div>
+        </div>        
     </div>
 </section>
 
@@ -655,9 +661,66 @@
 <div id="videoOverlay" class="video-overlay">
     <div class="video-overlay-content">
         <span class="close" onclick="closeVideo()">&times;</span>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eDqfg_LexCQ?si=T7dptv8d7rn8kCBv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </div>
+
+
+
+
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="footer-container">
+        <!-- Logo and Social Media -->
+        <div class="footer-logo-social">
+            <!-- Placeholder for Logo -->
+            <div class="footer-logo">
+                <img src="assests/GIGI Logo.svg" alt="Logo">
+            </div>
+            <div class="footer-social-icons">
+                <img src="assests/facebook.svg" alt="Facebook">
+                <img src="assests/twitter.svg" alt="Twitter">
+                <img src="assests/instagram.svg" alt="Instagram">
+                <img src="assests/youtube.svg" alt="LinkedIn">
+            </div>
+        </div>
+        
+        <!-- Quick Links -->
+        <div class="footer-links">
+            <h3>Quick Link</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">How It Works</a></li>
+            </ul>
+        </div>
+
+        <!-- Blog Links -->
+        <div class="footer-blog">
+            <h3>Blog</h3>
+            <ul>
+                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
+                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
+            </ul>
+        </div>
+
+        <!-- Contact Us -->
+        <div class="footer-contact">
+            <h3>Contact Us</h3>
+            <ul>
+                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
+                <li><img src="assests/email.svg" alt="Email Icon"> lamaroq@lamaroq.us</li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+        <p>&copy; 2023 All rights reserved</p>
+    </div>
+</footer>
 
 
 
