--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Home We Buy
@@ -229,7 +230,7 @@
                 <div class="icon-wrapper">
                     <img src="assests/Sell As Is.svg" alt="Sell As-Is" class="icon" />
                 </div>
-                <h3>Sell As-Is</h3>
+                <h3>Sell As-It-Is Condition</h3>
                 <p>We buy homes in any condition, saving you time and money on repairs or renovations.</p>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
@@ -710,7 +711,7 @@
             <h3>Contact Us</h3>
             <ul>
                 <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
-                <li><img src="assests/email.svg" alt="Email Icon"> lamaroq@lamaroq.us</li>
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
                 <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
             </ul>
         </div>
