--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -9,6 +9,46 @@
 </head>
 <body>
 
+ <!-- Fixed Navbar -->
+ <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Home We Buy
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
+                        <li><a class="dropdown-item" href="#">Option 1</a></li>
+                        <li><a class="dropdown-item" href="#">Option 2</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="whySellDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Why Sell?
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
+                        <li><a class="dropdown-item" href="#">Reason 1</a></li>
+                        <li><a class="dropdown-item" href="#">Reason 2</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+            </ul>
+            <a href="#" class="btn btn-warning ms-3">Sell Now</a>
+        </div>
+    </div>
+</nav>
+
+
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
