--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selling a Home During Divorce | GIGI Buys Homes</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your stylesheet -->
     <link rel="icon" type="image/x-icon" href="assests/GIGI Favicon.svg">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
- <!-- Fixed Navbar -->
- <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
+<!-- Fixed Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Home We Buy
@@ -35,8 +40,12 @@
                         Why Sell?
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                        <li><a class="dropdown-item" href="#">Reason 1</a></li>
-                        <li><a class="dropdown-item" href="#">Reason 2</a></li>
+                        <li><a class="dropdown-item" href="#">Facing Foreclosure</a></li>
+                        <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
+                        <li><a class="dropdown-item" href="#">Inherited Property</a></li>
+                        <li><a class="dropdown-item" href="#">Financial Difficulties</a></li>
+                        <li><a class="dropdown-item" href="#">Relocation</a></li>
+                        <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
@@ -49,92 +58,150 @@
 </nav>
 
 
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="container">
-            <h1>Selling a Home During Divorce</h1>
-            <p>Navigating the Emotional and Legal Challenges with GIGI Buys Homes</p>
-        </div>
-    </section>
 
-    <!-- Introduction Section -->
-    <section class="intro-section">
-        <div class="container">
-            <h2>Open Communication and Professional Guidance</h2>
-            <div class="content-row">
-                <div class="text">
-                    <p>Selling a home during a divorce requires open, transparent communication between both parties. It’s crucial to express your needs and goals clearly throughout the process. Involving a neutral third party like a mediator can help manage emotions and facilitate constructive dialogue.</p>
-                    <p>At GIGI Buys Homes, we provide professional support during the home selling process to help you make the best decisions during this difficult time.</p>
-                </div>
-                <!-- Placeholder for Image -->
-                <div class="image-placeholder">Image Placeholder</div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Legal Implications Section -->
-    <section class="legal-section">
-        <div class="container">
-            <h2>Understanding Legal Implications</h2>
-            <div class="content-row">
-                <!-- Placeholder for Image -->
-                <div class="image-placeholder">Image Placeholder</div>
-                <div class="text">
-                    <p>It’s essential to consult a family law attorney to fully understand the legal responsibilities tied to selling a home during a divorce. A legal professional will guide you through details like property rights, ownership agreements, and financial obligations.</p>
-                    <p>At GIGI Buys Homes, we ensure the process meets legal requirements and protects your rights.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- Top Image Section -->
+<section class="divorce-top-image">
+    <img src="assests/Why Sell/Divorce and Sepratation page image.svg" alt="Divorce and Home Selling" />
+</section>
 
-    <!-- GIGI Buys Homes Section -->
-    <section class="gigi-section">
-        <div class="container">
-            <h2>GIGI Buys Homes: Cash Offers for Your Property</h2>
-            <div class="content-row">
-                <div class="text">
-                    <p>If you’re looking for a fast, hassle-free solution, GIGI Buys Homes offers cash purchases for homes as-is. Our process is simple:</p>
-                    <ul>
-                        <li>Fill out our online form.</li>
-                        <li>We schedule a walkthrough of your property.</li>
-                        <li>Receive a cash offer within 24 hours.</li>
-                        <li>No hidden fees, no realtors, and no commissions—just a simple, direct sale.</li>
-                    </ul>
-                </div>
-                <!-- Placeholder for Image -->
-                <div class="image-placeholder">Image Placeholder</div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Selling Approach Section -->
-    <section class="approach-section">
-        <div class="container">
-            <h2>Deciding on the Best Selling Approach</h2>
-            <div class="content-row">
-                <!-- Placeholder for Image -->
-                <div class="image-placeholder">Image Placeholder</div>
-                <div class="text">
-                    <p>Once you understand the legal aspects, it’s time to decide how to sell your home. Traditional real estate sales take longer but can bring higher profits, while cash buyers like GIGI Buys Homes offer faster, simpler transactions. The right method depends on your goals—whether it’s speed or maximizing profits.</p>
-                </div>
-            </div>
+<section class="divorce-page-section">
+    <div class="divorce-container">
+      <div class="divorce-row">
+        <div class="divorce-content-left">
+          <h1>Selling a Home During Divorce</h1>
+          <h2>Navigating the Emotional and Legal Challenges</h2>
+          <p>
+            Divorce often involves many difficult decisions, and selling the family home can be one of the most emotionally charged and legally complex aspects. At GIGI Buys Homes, we understand the challenges you face during this time. In this guide, we’ll walk you through the essential steps and considerations when selling your home during a separation or divorce.
+          </p>
         </div>
-    </section>
-
-    <!-- Emotional Support Section -->
-    <section class="emotional-section">
-        <div class="container">
-            <h2>Handling the Emotional Challenges</h2>
-            <div class="content-row">
-                <div class="text">
-                    <p>Selling your home during a divorce can be emotionally taxing. It’s important to acknowledge these emotions and seek support when needed. At GIGI Buys Homes, we strive to offer an easy, stress-free home sale, reducing the burden on you during this challenging time.</p>
-                    <p>Focus on the future, and let us handle the details of your home sale efficiently, so you can move forward with confidence.</p>
-                </div>
-                <!-- Placeholder for Image -->
-                <div class="image-placeholder">Image Placeholder</div>
-            </div>
+        <div class="divorce-image-right">
+          <img src="assests/Why Sell/Selling a Home During Divorce.svg" alt="Image representing home selling during divorce">
         </div>
-    </section>
+      </div>
+      <div class="divorce-row">
+        <div class="divorce-content-full">
+          <h2>Open Communication and Professional Guidance</h2>
+          <p>
+            Selling a home during a divorce requires open, transparent communication between both parties. It’s crucial to clearly express your needs, concerns, and goals throughout the process. Involving a neutral third party like a mediator or counselor can help manage emotions and facilitate constructive dialogue.
+          </p>
+          <p>
+            Professional support is invaluable in navigating the complexities of selling a home during a divorce. Legal experts, real estate agents, and financial advisors can provide essential insights, ensuring the process aligns with your best interests and legal requirements.
+          </p>
+        </div>
+      </div>
+  
+      <div class="divorce-row">
+        <div class="divorce-image-left">
+          <img src="assests/Why Sell/Selling a Home During Divorce.svg" alt="Image representing legal guidance">
+        </div>
+        <div class="divorce-content-right">
+          <h2>Understanding Legal Implications</h2>
+          <p>
+            Selling a home in the midst of a divorce comes with specific legal responsibilities. It's vital to consult a family law attorney to fully understand the implications of dividing assets, including property rights, ownership agreements, and financial obligations tied to the home.
+          </p>
+          <p>
+            A legal professional will guide you through these details, ensuring that the sale meets all legal requirements and protects your rights.
+          </p>
+        </div>
+      </div>
+  
+      <!-- Cash Offer Section -->
+<section class="cash-offer-section">
+    <div class="cash-offer-container">
+      <div class="cash-offer-row">
+        <div class="cash-offer-content">
+          <h2>GIGI Buys Homes: Cash Offers for Your Property</h2>
+          <ul class="cash-offer-list">
+            <li>Fill out our online form.</li>
+            <li>One of our agents will schedule a walkthrough of your property.</li>
+            <li>Receive a cash offer within 24 hours.</li>
+          </ul>
+          <p>No hidden fees, no realtors, and no commissions—just a simple, direct sale.</p>
+        </div>
+        <!-- Space for the form -->
+        <div class="cash-offer-form">
+          <!-- You can insert the form here -->
+          <form action="#" method="POST">
+            <input type="text" name="Address" placeholder="Address" required>
+            <input type="text" name="name" placeholder="Name" required>
+            <input type="email" name="Phone" placeholder="Phone" required>
+            <input type="email" name="email" placeholder="Email" required>
+            
+            <button type="submit" class="btn-submit">Get Your Cash Offer</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  
+      <div class="divorce-row">
+        <div class="divorce-content-left">
+          <h2>Deciding on the Best Selling Approach</h2>
+          <p>
+            Once you have a grasp of the legal aspects, it’s time to decide how to sell your home. Traditional sales through a real estate agent offer broad market exposure but may take longer to finalize. Alternatively, selling to a cash buyer, like GIGI Buys Homes, provides a quicker, simpler sale with fewer complications.
+          </p>
+          <p>
+            Choosing the right method depends on your goals. If speed and ease are priorities, a cash sale might be the best option.
+          </p>
+        </div>
+        <div class="divorce-image-right">
+          <img src="assests/Why Sell/Deciding on the Best Selling Approach.webp" alt="Image representing different selling approaches">
+        </div>
+      </div>
+  
+      <div class="divorce-row">
+        <div class="divorce-content-full">
+          <h2>Collaborating for a Smooth Sale Process</h2>
+          <p>
+            Working together with your ex-spouse might not be easy, but cooperation is key to a smooth sale. Engaging an experienced real estate agent who specializes in divorce-related sales can make a big difference. They act as neutral parties, helping to mediate decisions and ensure both parties’ interests are protected.
+          </p>
+          <p>
+            At GIGI Buys Homes, we can provide a quick and stress-free solution, allowing you to avoid the prolonged process of traditional home sales.
+          </p>
+        </div>
+      </div>
+  
+      <div class="divorce-row">
+        <div class="divorce-image-left">
+          <img src="assests/Why Sell/Maintaining the Property.svg" alt="Image representing maintaining the property">
+        </div>
+        <div class="divorce-content-right">
+          <h2>Maintaining the Property</h2>
+          <p>
+            Both parties should collaborate to keep the property in good shape throughout the selling process. This includes minor repairs, cleaning, and presenting the home in a way that attracts buyers and enhances its marketability.
+          </p>
+        </div>
+      </div>
+  
+      <div class="divorce-row">
+        <div class="divorce-content-full">
+          <h2>Handling the Emotional Challenges</h2>
+          <p>
+            Divorce is emotionally taxing, and selling your home can add to the stress. It’s important to acknowledge these emotions and seek support when needed. Professional counselors or support groups can help you cope with the emotional toll of this process and provide a safe space to express your feelings.
+          </p>
+          <p>
+            At GIGI Buys Homes, we strive to offer an easy, quick, and stress-free home sale experience, reducing the burden on you during this challenging time.
+          </p>
+        </div>
+      </div>
+  
+      <div class="divorce-row">
+        <div class="divorce-content-left">
+          <h2>Focus on the Future</h2>
+          <p>
+            Selling your home during a divorce can mark the beginning of a new chapter. By working with GIGI Buys Homes, you can move forward with confidence, knowing that our team will handle the details of your home sale efficiently, leaving you free to focus on your future.
+          </p>
+        </div>
+        <div class="divorce-image-right">
+          <img src="assests/Why Sell/Focus on the Future.svg" alt="Image representing future focus">
+        </div>
+      </div>
+    </div>
+  </section>
+  
 
 </body>
 </html>
