--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <!-- Fixed Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
+            <a class="navbar-brand" href="index.html">
+                <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" href="index.html" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Home We Buy
@@ -49,8 +49,12 @@
                             Why Sell?
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                            <li><a class="dropdown-item" href="#">Reason 1</a></li>
-                            <li><a class="dropdown-item" href="#">Reason 2</a></li>
+                            <li><a class="dropdown-item" href="#">Facing Foreclosure</a></li>
+                            <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
+                            <li><a class="dropdown-item" href="#">Inherited Property</a></li>
+                            <li><a class="dropdown-item" href="#">Financial Difficulties</a></li>
+                            <li><a class="dropdown-item" href="#">Relocation</a></li>
+                            <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
@@ -300,6 +304,9 @@
 
 
 
+
+
+
 <!--Offer Calculation Section-->
 <!-- Offer Calculation Section -->
 <section class="offer-calc-section">
@@ -446,7 +453,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="divorce and seperation.html" target="_blank" class="unique-housing-link">
+                <a href="divorce and seperation.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Divorce or Separation.svg" alt="Divorce or Separation" class="unique-housing-image">
                     </div>
