--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 </head>
 <body>
+
+
     <!-- Fixed Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
         <div class="container">
@@ -49,9 +51,9 @@
                             Why Sell?
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                            <li><a class="dropdown-item" href="#">Facing Foreclosure</a></li>
+                            <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
                             <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
-                            <li><a class="dropdown-item" href="#">Inherited Property</a></li>
+                            <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
                             <li><a class="dropdown-item" href="#">Financial Difficulties</a></li>
                             <li><a class="dropdown-item" href="#">Relocation</a></li>
                             <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
@@ -716,10 +718,10 @@
                 <img src="assests/GIGI Logo.svg" alt="Logo">
             </div>
             <div class="footer-social-icons">
-                <img src="assests/facebook.svg" alt="Facebook">
-                <img src="assests/twitter.svg" alt="Twitter">
-                <img src="assests/instagram.svg" alt="Instagram">
-                <img src="assests/youtube.svg" alt="LinkedIn">
+                <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
+                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
+                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
             </div>
         </div>
         
