--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="assests/GIGI Favicon.svg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -14,11 +15,12 @@
 </head>
 <body>
 
-<!-- Fixed Navbar -->
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" class="logo">
+            <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" href="index.html" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,9 +42,9 @@
                         Why Sell?
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                        <li><a class="dropdown-item" href="#">Facing Foreclosure</a></li>
+                        <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
                         <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
-                        <li><a class="dropdown-item" href="#">Inherited Property</a></li>
+                        <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
                         <li><a class="dropdown-item" href="#">Financial Difficulties</a></li>
                         <li><a class="dropdown-item" href="#">Relocation</a></li>
                         <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
@@ -77,7 +79,7 @@
           </p>
         </div>
         <div class="divorce-image-right">
-          <img src="assests/Why Sell/Selling a Home During Divorce.svg" alt="Image representing home selling during divorce">
+          <img src="assests/Why Sell/Selling Home During Divorce.svg" alt="Image representing home selling during divorce">
         </div>
       </div>
       <div class="divorce-row">
@@ -94,7 +96,7 @@
   
       <div class="divorce-row">
         <div class="divorce-image-left">
-          <img src="assests/Why Sell/Selling a Home During Divorce.svg" alt="Image representing legal guidance">
+          <img src="assests/Why Sell/Selling Home During Divorce.svg" alt="Image representing legal guidance">
         </div>
         <div class="divorce-content-right">
           <h2>Understanding Legal Implications</h2>
@@ -202,6 +204,89 @@
     </div>
   </section>
   
+
+
+  <!-- Enhanced Conclusion Section -->
+<section class="conclusion-section">
+    <div class="conclusion-box">
+        <div class="step-indicator">
+            <span class="step-number">Moving Forward: Navigating the Sale with Confidence</span>
+        </div>
+        <!-- <h2 class="conclusion-title">Moving Forward: Navigating the Sale with Confidence</h2> -->
+        <p class="conclusion-text">
+            Selling a home during a divorce or separation can be an overwhelming experience, but with proper planning, legal guidance, and open communication, the process becomes more manageable. While emotions may run high, working together and addressing financial and legal aspects early on can significantly ease the journey. By focusing on cooperation and seeking professional support, you can turn this challenging situation into an opportunity for a fresh start and a brighter future.
+        </p>
+        <div class="conclusion-call-to-action">
+            <a href="#" class="btn conclusion-btn">Contact Us Today for Support</a>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+  <!-- Footer Section -->
+<footer class="footer">
+    <div class="footer-container">
+        <!-- Logo and Social Media -->
+        <div class="footer-logo-social">
+            <!-- Placeholder for Logo -->
+            <div class="footer-logo">
+                <img src="assests/GIGI Logo.svg" alt="Logo">
+            </div>
+            <div class="footer-social-icons">
+                <img src="assests/facebook.svg" alt="Facebook" id="Facebook">
+                <img src="assests/twitter.svg" alt="Twitter" id="Twitter">
+                <img src="assests/instagram.svg" alt="Instagram" id="Instagram">
+                <img src="assests/youtube.svg" alt="Youtube" id="Youtube">
+            </div>
+        </div>
+        
+        <!-- Quick Links -->
+        <div class="footer-links">
+            <h3>Quick Link</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">How It Works</a></li>
+            </ul>
+        </div>
+
+        <!-- Blog Links -->
+        <div class="footer-blog">
+            <h3>Blog</h3>
+            <ul>
+                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
+                <li><a href="#">People Saying About Footer.<br><span>8 Oct, 2024</span></a></li>
+            </ul>
+        </div>
+
+        <!-- Contact Us -->
+        <div class="footer-contact">
+            <h3>Contact Us</h3>
+            <ul>
+                <li><img src="assests/location.svg" alt="Location Icon"> 44 Danvers, NY City, USA, 70-102</li>
+                <li><img src="assests/email.svg" alt="Email Icon"> <a href="mailto:gigi@buyhomes.com" style="color: white; text-decoration: none;">gigi@buyhomes.com</a></li>
+                <li><img src="assests/call.svg" alt="Phone Icon"> +91-595-656-656</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer Bottom -->
+    <div class="footer-bottom" id="bottom">
+        <p>&copy; 2023 All rights reserved</p>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js"></script>
+
 
 </body>
 </html>
